bk_ida/gccida/g0/get_mode_alignment
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_mode_alignment/src/rtl.c:935:35: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  get_mode_alignment( machine_mode mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_mode_alignment/src/rtl.c:940:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_COMPLEX_FLOAT || mode_class_0[mode] == MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_mode_alignment/src/rtl.c:130:23: note: 'mode_class' declared here
const enum mode_class mode_class[NUM_MACHINE_MODES] = {
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_mode_alignment/src/rtl.c:940:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_COMPLEX_FLOAT || mode_class_0[mode] == MODE_COMPLEX_INT ) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_mode_alignment/src/rtl.c:130:23: note: 'mode_class' declared here
const enum mode_class mode_class[NUM_MACHINE_MODES] = {
                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_mode_alignment/src/obj/rtl.o] Error 1
